[project]
name = "ml-class"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "interpret>=0.7.8",
    "ipykernel>=7.2.0",
    "kagglehub>=0.4.3",
    "lightgbm>=4.6.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "missforest>=4.2.3",
    "missingno>=0.5.2",
    "missingpy>=0.2.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "xgboost>=3.2.0",
]
